# htb-ai

./: .gitignore  README.md  Untitled.ipynb  main.py  malware_classifier.ipynb  network_anomaly_detection.ipynb  pyproject.toml  review_classifier.ipynb  sample.ipynb  spam_filter.ipynb
models/: spam_detection_model.joblib
