[project]
name = "htb-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "category-encoders>=2.9.0",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.16.4",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "optimum>=2.1.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "requests-toolbelt>=1.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "split-folders>=0.6.1",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
]
